Fix: Add leaderboard debug page and in-app debug menu to fix leaderboard puzzle type matching logic.

--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@
                     </path>
                 </svg>
             </button>
-            <h3 class="text-lg font-bold text-blue-400 mb-4" id="detail-name">Player Details</h3>
+            <h3 class="text-lg font-bold text-blue-400 mb-1" id="detail-name">Player Details</h3>
+            <p class="text-sm text-gray-400 font-bold mb-4" id="detail-puzzle-type">Puzzle Type</p>
 
             <div class="mb-4">
                 <p class="text-xs text-gray-500 uppercase font-bold">Scramble</p>
