--- a/debug_leaderboard.html
+++ b/debug_leaderboard.html
@@ -41,15 +41,30 @@
                 <th class="p-2 border border-gray-700 cursor-pointer hover:bg-gray-700" onclick="sortBy('date')">Date
                     <span id="sort-date" class="text-blue-400"></span>
                 </th>
+                <th class="p-2 border border-gray-700">Actions</th>
             </tr>
         </thead>
         <tbody id="tbody"></tbody>
     </table>
 
+    <!-- Delete Confirmation Modal -->
+    <div id="delete-modal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
+        <div class="bg-gray-800 p-6 rounded-lg shadow-xl border border-gray-700 max-w-sm w-full">
+            <h3 class="text-xl font-bold mb-4 text-white">Confirm Deletion</h3>
+            <p class="text-gray-300 mb-6">Are you sure you want to delete this record? This action cannot be undone.</p>
+            <div class="flex justify-end space-x-3">
+                <button onclick="closeDeleteModal()"
+                    class="px-4 py-2 bg-gray-700 hover:bg-gray-600 rounded text-white">Cancel</button>
+                <button id="confirm-delete-btn"
+                    class="px-4 py-2 bg-red-600 hover:bg-red-700 rounded text-white">Delete</button>
+            </div>
+        </div>
+    </div>
+
     <script type="module">
         import { initializeApp } from 'firebase/app';
         import { getAuth, signInAnonymously } from 'firebase/auth';
-        import { getFirestore, collection, getDocs } from 'firebase/firestore';
+        import { getFirestore, collection, getDocs, deleteDoc, doc } from 'firebase/firestore';
 
         const firebaseConfig = {
             apiKey: "AIzaSyComkbqxc6zG22ungiEINKTFh9Dp1sxvfE",
@@ -79,6 +94,36 @@
                 if (key === 'date') currentSort.dir = 'desc';
             }
             renderTable();
+        };
+
+        let recordToDelete = null;
+
+        window.deleteRecord = (event, id) => {
+            event.stopPropagation();
+            recordToDelete = id;
+            document.getElementById('delete-modal').classList.remove('hidden');
+        };
+
+        window.closeDeleteModal = () => {
+            document.getElementById('delete-modal').classList.add('hidden');
+            recordToDelete = null;
+        };
+
+        document.getElementById('confirm-delete-btn').onclick = async () => {
+            if (!recordToDelete) return;
+
+            const id = recordToDelete;
+            closeDeleteModal(); // Close immediately to prevent double clicks
+
+            try {
+                await deleteDoc(doc(db, 'artifacts', 'rubiks-cube-app', 'public', 'data', 'leaderboard', id));
+                records = records.filter(r => r.id !== id);
+                renderTable();
+                document.getElementById('status').textContent = `Record deleted. ${records.length} records remaining.`;
+            } catch (e) {
+                console.error("Error deleting record: ", e);
+                alert("Failed to delete record: " + e.message);
+            }
         };
 
         function renderTable() {
@@ -124,6 +169,9 @@
                     <td class="p-2 border border-gray-700 font-mono text-yellow-400">${r.puzzleType || 'Unknown'}</td>
                     <td class="p-2 border border-gray-700 font-mono text-green-400">${r.timeString || '-'}</td>
                     <td class="p-2 border border-gray-700 text-xs text-gray-400">${r.date ? new Date(r.date).toLocaleString() : 'No Date'}</td>
+                    <td class="p-2 border border-gray-700 text-center">
+                        <button type="button" onclick="deleteRecord(event, '${r.id}')" class="bg-red-600 hover:bg-red-700 text-white px-2 py-1 rounded text-xs">Delete</button>
+                    </td>
                 `;
                 tbody.appendChild(tr);
             });
@@ -137,7 +185,7 @@
 
                 records = [];
                 snapshot.forEach(doc => {
-                    records.push(doc.data());
+                    records.push({ id: doc.id, ...doc.data() });
                 });
 
                 document.getElementById('status').textContent = `Loaded ${records.length} records.`;
