--- a/index.html
+++ b/index.html
@@ -538,10 +538,11 @@
                         </div>
                     </label>
                 </div>
+                <!-- Cube Tuner Toggle -->
                 <div class="flex items-center justify-between p-3 bg-gray-900/50 rounded-lg">
-                    <span class="text-gray-300">Show Radius Slider</span>
+                    <span class="text-gray-300">Show Cube Tuner</span>
                     <label class="relative inline-block w-12 h-6">
-                        <input type="checkbox" id="toggle-radius-slider" class="sr-only peer">
+                        <input type="checkbox" id="toggle-cube-tuner" class="sr-only peer">
                         <div
                             class="w-12 h-6 bg-gray-600 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-6 peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600">
                         </div>
@@ -611,6 +612,51 @@
     <div id="fps-counter"
         class="hidden absolute top-32 right-4 z-50 bg-black/70 backdrop-blur-md border border-gray-700 rounded-lg px-3 py-2 text-white font-mono text-sm cursor-move">
         FPS: <span id="fps-value" class="text-green-400 font-bold">60</span>
+    </div>
+
+    <!-- Cube Tuner UI -->
+    <div id="cube-tuner-ui"
+        class="hidden absolute top-20 left-4 z-50 bg-black/70 backdrop-blur-md border border-gray-700 p-4 rounded-lg text-white text-sm shadow-xl w-64">
+        <div id="cube-tuner-header"
+            class="flex justify-between items-center mb-3 cursor-move border-b border-gray-700 pb-2">
+            <h3 class="font-bold text-blue-400">Cube Tuner</h3>
+            <button id="close-cube-tuner" class="text-gray-400 hover:text-white">&times;</button>
+        </div>
+
+        <div class="mb-3">
+            <label class="block mb-1 text-gray-300">Cubie Radius: <span id="cubie-radius-val"
+                    class="text-white font-mono">0.074</span></label>
+            <input type="range" id="cubie-radius-slider" min="0" max="1.0" step="0.001" value="0.074"
+                class="w-full h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+        </div>
+
+        <div class="mb-3">
+            <label class="block mb-1 text-gray-300">Cubie Gap: <span id="cubie-gap-val"
+                    class="text-white font-mono">0.004</span></label>
+            <input type="range" id="cubie-gap-slider" min="0" max="0.2" step="0.001" value="0.004"
+                class="w-full h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+        </div>
+
+        <div class="mb-3">
+            <label class="block mb-1 text-gray-300">Sticker Size: <span id="sticker-size-val"
+                    class="text-white font-mono">0.800</span></label>
+            <input type="range" id="sticker-size-slider" min="0.5" max="1.0" step="0.005" value="0.800"
+                class="w-full h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+        </div>
+
+        <div class="mb-3">
+            <label class="block mb-1 text-gray-300">Sticker Radius: <span id="sticker-radius-val"
+                    class="text-white font-mono">0.200</span></label>
+            <input type="range" id="sticker-radius-slider" min="0" max="0.5" step="0.005" value="0.200"
+                class="w-full h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+        </div>
+
+        <div class="mt-4 text-center">
+            <button id="btn-reset-tuner-defaults"
+                class="bg-gray-700 hover:bg-gray-600 text-white text-xs py-1 px-3 rounded transition">
+                Reset to Defaults
+            </button>
+        </div>
     </div>
 
     <!-- Mirror Cube Debug UI -->
@@ -740,14 +786,7 @@
                 class="w-20 bg-gray-800 border border-gray-600 rounded px-2 py-1 text-white text-sm font-mono text-center">
         </div>
 
-        <!-- Radius Controls -->
-        <div id="radius-controls" class="hidden flex items-center gap-4">
-            <label class="text-white text-sm font-medium w-12 text-right">Radius:</label>
-            <input type="range" id="radius-slider" min="0" max="0.1" step="0.001" value="0.02"
-                class="w-64 h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
-            <input type="text" id="radius-value" value="0.020"
-                class="w-20 bg-gray-800 border border-gray-600 rounded px-2 py-1 text-white text-sm font-mono text-center">
-        </div>
+
     </div>
 
     <div id="canvas-container"></div>
