feat: Add Android build workflow documentation and implement safe area support for UI.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Rubik's Cube Web App</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -48,7 +48,7 @@
 <body>
 
     <!-- Top Bar: Unified Controls (Title, Timer, Buttons) -->
-    <div class="absolute top-0 left-0 w-full z-30 pointer-events-none p-2 sm:p-4">
+    <div class="absolute top-0 left-0 w-full z-30 pointer-events-none p-2 sm:p-4 safe-mt">
         <div
             class="pointer-events-auto bg-gray-900/90 backdrop-blur-md rounded-xl border border-gray-700 shadow-2xl p-3 flex flex-wrap items-center justify-center lg:justify-between gap-3 mx-auto max-w-4xl">
 
